@startuml
' テーマ設定
skinparam classAttributeIconSize 0
skinparam monochrome true
' インターフェース定義
interface "Layer (Interface)" as Layer {

- Encapsulate(packet: Packet): Packet
- Decapsulate(packet: Packet): Packet
- Name(): string
  }
  ' パケット構造体
  class ApplicationPacket {
- Payload: string
  }
  class TransportPacket {
- SrcPort: int
- DstPort: int
- ApplicationPacket
  }
  class InternetPacket {
- SrcIP: string
- DstIP: string
- TransportPacket
  }
  class NetworkInterfacePacket {
- Preamble: string
- DstMAC: string
- SrcMAC: string
- EtherType: string
- InternetPacket
- FCS: string
  }
  ' 各層の構造体定義
  class ApplicationLayer {
* messageBody: string
* sender: string
* recipient: string
- NewApplicationLayer(...)
  }
  class TransportLayer {
* srcPort: int
* dstPort: int
- NewTransportLayer(...)
  }
  class InternetLayer {
* srcIP: string
* dstIP: string
- NewInternetLayer(...)
  }
  class NetworkInterfaceLayer {
* srcMAC: string
* dstMAC: string
* medium: string
- NewNetworkInterfaceLayer(...)
  }
  ' 関係性の定義 (Realization: 実装)
  Layer <|.. ApplicationLayer
  Layer <|.. TransportLayer
  Layer <|.. InternetLayer
  Layer <|.. NetworkInterfaceLayer
  ' メイン関数との関係
  class Main {
- main()
  }
  Main ..> Layer : uses (Slice of Layers)
  Main ..> ApplicationPacket : uses
  Main ..> TransportPacket : uses
  Main ..> InternetPacket : uses
  Main ..> NetworkInterfacePacket : uses
  @enduml
